<resources>
    <string name="app_name">GAG Driver</string>

    <string name="btn_login">Login</string>
    <string name="btn_change">Change Password</string>
    <string name="btn_next">Next</string>
    <string name="btn_otp">OTP</string>
    <string name="btn_forgot">Forgot</string>
    <string name="btn_upload">Upload</string>
    <string name="btn_submit">Submit</string>

    <string name="txt_create">Create Account</string>
    <string name="txt_back_login">Back to Login</string>
    <string name="txt_forget">Forgot Password?</string>
    <string name="user_name">Name</string>
    <string name="user_email">Email id</string>
    <string name="password">Password</string>
    <string name="re_password">Enter Again Password</string>
    <string name="txt_phone">Phone Number</string>

    <string name="txt_otp">OTP</string>
    <string name="txt_forgot">Phone Number</string>

    <string name="txt_resend_otp">Resend Code</string>

    <string name="txt_phone_message">Don\'t worry! just fill in your phone number and we\'ll help you reset your password </string>

    <string name="txt_otp_message">Enter One Time Password (OTP)\nOne Time Password (OTP) has been\nsend to your phone number, Please\nenter the same here to login.</string>


    <string name="trained_driver">Trained &amp; Professional Drivers</string>
    <string name="cab_clean">Clean &amp; Well Maintained Cars</string>
    <string name="cab_ontime">Guaranteed On Time Pickup</string>
    <string name="search_cab">Search Cabs</string>
    <string name="suv">SUV</string>
    <string name="sedan">Sedan</string>
    <string name="compact">Compact</string>
    <string name="cab_pick_time">Pickup Time</string>
    <string name="cab_pick_date">Pickup Date</string>
    <string name="cab_destination">Enter Your Destination city</string>
    <string name="destination">Destination</string>
    <string name="cab_source">Enter Your Pickup City</string>
    <string name="source">From</string>
    <string name="str_return_date">Return Date</string>
    <string name="retain_cab">Keep Cab till You Return</string>
    <string name="cab_multiple_pickup">Multiple Pickup &amp; Drop</string>
    <string name="cab_convenient">Enjoy Sight Seeing</string>


    <string name="upcoming">Upcoming</string>
    <string name="today">Today</string>

    <string name="cross_promotion_title">Your trip is Sorted! Must Try</string>
    <string name="vehicle_brand">VEHICLE BRAND</string>
    <string name="model">MODEL</string>
    <string name="year">YEAR</string>
    <string name="seating">SEATING</string>
    <string name="new_old">NEW/OLD</string>
    <string name="car_decorated">CAR DECORATED</string>
    <string name="add_car_complete">Complete</string>
    <string name="traveller_s_information">Traveller\'s Information</string>
    <string name="pickup_address">PickUp Address</string>
    <string name="drop_off_address">Drop Off Address</string>
    <string name="full_name">Full Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="amount_summary">Amount Summary</string>
    <string name="estimated_fare">Estimated Fare</string>
    <string name="toll_and_state_charges">Toll and State Charges</string>
    <string name="extra_kms_charges">Extra KMs Charges</string>
    <string name="included">Included</string>
    <string name="net_amount">Net Amount</string>
    <string name="book_now">Book Now</string>
    <string name="complete_your_order">Complete Your Order</string>
    <string name="source_8594_destination">Source → Destination</string>
    <string name="date_time">date time</string>
    <string name="confirm_cab_s">Confirm Cab\'s</string>
    <string name="arrow"><b>&#8594;</b></string>
    <string name="cab_price_kms">Cab Price/Kms</string>
    <string name="cab_name">Cab Name</string>
    <string name="cab_price">Cab Fare</string>
    <string name="car_number">Car Number</string>
    <string name="car_rate">Car Rate</string>
    <string name="decoration_available">decoration available</string>
    <string name="add_image">Add min 3 Images</string>
    <string name="decoration_rate">decoration rate</string>
    <string name="add_car">Add Car</string>
    <string name="driver_name">Driver Name</string>
    <string name="your_ratting">YOUR RATTING</string>
    <string name="ratting_text_review">Please give me five stars ratting \nand write your review!</string>
    <string name="dot_line">................................................................................................................</string>
    <string name="wirte_your_review">wirte your review..</string>
    <string name="submit">submit</string>
    <string name="schedule">Schedule</string>
    <string name="aadhar_number">Aadhar Number</string>
    <string name="upload_driver_documents">Upload Driver Documents</string>
    <string name="driving_license">Driving License</string>
    <string name="add_cab">Add Cab</string>
    <string name="start_trip">start trip</string>
    <string name="location">location</string>
    <string name="time">time</string>
    <string name="date">date</string>
    <string name="trip">Trip</string>
    <string name="map">Map</string>
    <string name="profile">Account</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="try_these_steps_to_get_back_online">Try these steps to get back online</string>
    <string name="check_your_modem_and_router">Check your modem and router</string>
    <string name="reconnect_to_wi_fi">Reconnect to Wi-Fi</string>
    <string name="try_again">Try Again</string>
    <string name="your_rating">Your Rating</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="done">Done</string>

    <string name="no_notification">No New Notification</string>
    <string name="no_notification_1">Oops! No notification for you yet!</string>
    <string name="no_driver_request_1">Oops! No driver request for you yet!</string>
    <string name="no_review_1">Oops! No Review for you yet!</string>
    <string name="no_booking_1">Oops! No Booking for you yet!</string>
    <string name="no_ride_1">Oops! No Ride completed yet!</string>
    <string name="no_booking">No Booking</string>
    <string name="your_account">Your account</string>
    <string name="safety_and_privacy">Safety and Privacy</string>
    <string name="manage_account_privacy_and_policy">Manage account privacy and policy</string>
    <string name="privacy_and_policy">Privacy and policy</string>
    <string name="terms_and_conditions">Terms and conditions</string>
    <string name="setting">Setting</string>
    <string name="manage_your_cab">Manage your cab</string>
    <string name="update_cab_details">Update cab details</string>
    <string name="user_reviews">User reviews</string>
    <string name="Change_Password">Change Password</string>
    <string name="notification">Notification</string>
    <string name="title_activity_start_trip">Map</string>
    <string name="meter_reading">Meter Reading</string>
    <string name="toll_tax">Any Tax</string>
    <string name="toll_and_state_tax">Toll and State Tax</string>
    <string name="total_amount">Total Amount</string>
    <string name="paid_amount">paid Amount</string>
    <string name="way">Way</string>
    <string name="user_review">User Review</string>
    <string name="comment">Comment</string>
    <string name="no_review">No Review</string>
    <string name="no_ride">No Ride</string>
    <string name="logout">LogOut</string>
    <string name="register">Register</string>
    <string name="request_for_cab_by_name">New driver request</string>
    <string name="no_driver_request">No Driver Request</string>
    <string name="cab_brand">Cab Brand</string>
    <string name="drivers_request">Drivers Request</string>
    <string name="all_drivers">All Drivers</string>
    <string name="total_trips">Total Trips</string>
    <string name="total_trip">Total Trip</string>
    <string name="cancelled_cab">Cancelled Cab</string>
    <string name="no_ride_2">Oops! No Ride cancelled yet!</string>
    <string name="cancel_trip">Cancel Trip</string>
    <string name="user">User</string>
    <string name="driver">Driver</string>
    <string name="cab_type">Cab Type</string>
    <string name="driver_city">Driver City</string>
    <string name="cab_city">Cab City</string>
    <string name="number_of_night">Number Of Nights Stay</string>
</resources>
