<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:orientation="vertical">

    <EditText
        android:id="@+id/edtReading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/black"
        android:hint="@string/meter_reading"
        android:inputType="number" />

    <EditText
        android:id="@+id/edtTax"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/black"
        android:hint="@string/toll_tax"
        android:inputType="number" />

    <EditText
        android:id="@+id/edtNight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/black"
        android:hint="@string/number_of_night"
        android:inputType="number" />

</LinearLayout>