<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:fitsSystemWindows="true"
    android:layout_height="match_parent"
    android:background="@color/cab_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#fff"
            app:elevation="0dp">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:elevation="0dp"
                app:popupTheme="@style/AppTheme.PopupOverlay"
                app:title=" ">

                <TextView
                    android:id="@+id/toolbar_title"
                    style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="Add Your Car"
                    android:textColor="@android:color/black"
                    android:textSize="20sp" />
            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.AppBarLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/vehicle_brand" />

            <AutoCompleteTextView
                android:id="@+id/actVehicle"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/auto_complete_background"
                android:lines="1"
                android:maxLines="1"
                android:paddingStart="5dp"
                android:singleLine="true" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/model" />

            <AutoCompleteTextView
                android:id="@+id/actModel"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/auto_complete_background"
                android:lines="1"
                android:maxLines="1"
                android:paddingStart="5dp"
                android:singleLine="true" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/seating" />

            <TextView
                android:id="@+id/txtSeating"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/auto_complete_background"
                android:gravity="center_vertical"
                android:paddingStart="5dp"
                android:textAlignment="gravity"
                android:textColor="@android:color/black" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/car_number" />

            <TextView
                android:id="@+id/txt_car_number"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/auto_complete_background"
                android:gravity="center_vertical"
                android:paddingStart="5dp"
                android:textAlignment="gravity"
                android:textColor="@android:color/black" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/car_rate" />

            <TextView
                android:id="@+id/txt_rate"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/auto_complete_background"
                android:gravity="center_vertical"
                android:paddingStart="5dp"
                android:textAlignment="gravity"
                android:textColor="@android:color/black" />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/ckbDecorated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:buttonTint="@android:color/black"
                android:text="@string/decoration_available" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/decoration_rate"
                android:visibility="gone" />

            <TextView
                android:id="@+id/txt_decoration_rate"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/auto_complete_background"
                android:gravity="center_vertical"
                android:paddingStart="5dp"
                android:textAlignment="gravity"
                android:textColor="@android:color/black"
                android:visibility="gone" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_marginTop="15dp"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/attach" />
                <TextView
                    android:layout_marginLeft="15dp"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textAlignment="gravity"
                    android:textColor="@color/black"
                    android:gravity="center_vertical"
                    android:text="@string/add_image"/>
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginTop="5dp">

                <androidx.viewpager.widget.ViewPager
                    android:id="@+id/slideViewPage"
                    android:layout_width="match_parent"
                    android:layout_height="150dp">

                </androidx.viewpager.widget.ViewPager>

                <TextView
                    android:id="@+id/linearLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:textColor="@android:color/black" />

            </RelativeLayout>
        </LinearLayout>

    </LinearLayout>


    <Button
        android:id="@+id/btnAddCar"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_alignParentBottom="true"
        android:background="@color/yellow_back"
        android:gravity="center"
        android:text="@string/add_car_complete"
        android:textAlignment="gravity"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

</RelativeLayout>